Adicionado transição de informação entre páginas com session

--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -12,8 +12,7 @@
     </head>
     <Section>
         <form action="">
-            <div class="dados">
-                <div>
+                <div >
                     <label for="">NOME</label>
                     <input name="nome" type="text">
                 </div>
@@ -42,9 +41,9 @@
                     </select>
                 </div>
                 <div class="div_sexo">     
-                    <label for=""> <span>MASC</span> <input name="sexo" value="MASC" type="checkbox"></label>
-                    <label for=""> <span>FEM</span> <input name="sexo" value="FEM" type="checkbox"></label>
-                    <label for=""> <span>OUTROS</span> <input name="sexo" value="OUTROS" type="checkbox"></label>                  
+                    <label for="" class="sexo"> <span>MASC</span> <input name="sexo" value="MASC" type="radio"></label>
+                    <label for="" class="sexo"> <span>FEM</span> <input name="sexo" value="FEM" type="radio"></label>
+                    <label for="" class="sexo"> <span>OUTROS</span> <input name="sexo" value="OUTROS" type="radio"></label>                  
                 </div>
             </div>
             <div class="div_button">
