Incluso icones na tela de confirmação

--- a/cadastro/confirmarCadastro.html
+++ b/cadastro/confirmarCadastro.html
@@ -11,15 +11,15 @@
         <h1>Cadastro</h1>
     </head>
     <Section>
-       <div> <label for="">NOME: </label> <span></span></div>
-       <div> <label for="">EMAIL: </label> <span></span></div>
-       <div> <label for="">ENDEREÇO: </label> <span></span></div>
-       <div> <label for="">ESTADO: </label> <span></span></div>
-       <div> <label for="">SEXO: </label> <span></span></div>
+       <div> <img src="/img/icons8-nome-16.png" alt=""> <label for="">NOME: </label> <span></span></div>
+       <div> <img src="/img/icons8-nova-mensagem-48.png" alt=""> <label for="">EMAIL: </label> <span></span></div>
+       <div> <img src="/img/icons8-endereço-100.png" alt=""> <label for="">ENDEREÇO: </label> <span></span></div>
+       <div> <img src="/img/icons8-bandeira-64.png" alt=""> <label for="">ESTADO: </label> <span></span></div>
+       <div>  <img src="/img/icons8-sexo-50.png" alt=""> <label for="">SEXO: </label> <span></span></div>
        
     </Section>
     <div class="div_btn">
-        <img src="/img/impressora.png" alt="">
+        <img class="impressora" src="/img/impressora.png" alt="">
     </div>
 
     <script src="/js/script2.js"></script>
